$Id: History,v 1.53 2002-12-03 14:44:32 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Dec 03 2002, G.Cosmo (event-V04-01-08)
- Protect code defining interface to HepMC from compilation on Windows systems.
  Temporarly solution until CLHEP will support the HepMC module on Windows.

Nov 25 2002, M.Asai (event-V04-01-07)
- Fix a bug in G4CellScorer.cc

Nov 18 2002, M.Asai (event-v04-01-06)
- Introducing HepMC interfaces
- Tag for Geant4 5.0 release

Nov 4th 2002 M.Dressel (event-V04-01-05)
     - remove G4std:: where it does not belong to

Oct 28 2002, M.Dressel (event-V04-01-04)
- Added G4CellScorer[.hh.cc], G4CellScorerStore[.hh.cc], G4ScoreTable[.hh.cc], G4Scorer[.hh.cc]

Oct 06 2002, M.Asai (event-V04-01-03)
- Protect user's mis-use of destructor of G4TrajectoryContainer.
  By design it was expected that G4TrajectoryContainer would be
  deleted by G4Event destructor, after "clearAndDestroy" is
  separately invoked.

Aug 19 2002, M.Asai (event-V04-01-02)
- Change the default value of charge for G4PrimaryParticle.

Aug 13 2002, M.Asai (event-V04-01-01)
- G4Event: Introducing an EventAborted flag.

Jun 29 2002, V.Ivantchenko (event-V04-01-00)